--- a/index.html
+++ b/index.html
@@ -2,8 +2,18 @@
 <html>
 <head>
 	<title>Tekst Piosenki</title>
+	<link rel="stylesheet" type="text/css" href="/style.css">
 </head>
 <body>
-
+<section class="Song">	
+	<h1>Hymn Polski - Narodowy Hymn</h1>
+		<h2>Józef Wybicki</h2>
+			<p> 1.
+			Jeszcze Polska nie zginęła,
+			Kiedy my żyjemy.
+			Co nam obca przemoc wzięła,
+			Szablą odbierzemy. 
+			</p>
+</section>			
 </body>
 </html>
