Change song content

--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
 			Co nam obca przemoc wzięła,
 			Szablą odbierzemy. 
 			</p>
+			<p> 2.
+			Przejdziem Wisłę, przejdziem Wartę,
+			Będziem Polakami,
+			Dał nam przykład Bonaparte,
+			Jak zwyciężać mamy.
 </section>			
 </body>
 </html>
